src/test/resources/30/single/xhtml/valid/edupub-sectioning-explicit-sections.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>EDUPUB headings test</title>
    </head>
    <body>
    	<section epub:type="subchapter">
    		<h1>Table of Contents</h1>
    		<ol>
    			<li>Subsection 1</li>
    		</ol>
    	</section>
    	<section epub:type="subchapter">
    		<header>
    			<h1>Subsection</h1>
    		</header>
			<p>Lorem Ispum Dolor...</p>
    	</section>
    </body>
</html>