src/test/resources/30/single/xhtml/invalid/edupub-sectioning-arialabel-heading.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>EDUPUB headings test</title>
    </head>
	<body aria-label="Body">
    	<h1>Body</h1>
    	<!-- all subsequent headings should be h3 and lower -->
    	<nav epub:type="toc">
    		<h2>Table of Contents</h2>
    		<ol>
    			<li>Subsection 1</li>
    		</ol>
    	</nav>
    	<section aria-label="Subsection">
    		<h2>Subsection</h2>
    		<p>Content.</p>
    	</section>
    </body>
</html>